[gd_scene load_steps=3 format=3 uid="uid://bfpxbwr7stnv2"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_7q6o2"]
[ext_resource type="PackedScene" uid="uid://bchxq3dst4hlc" path="res://scenes/options.tscn" id="2_tpygb"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7q6o2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "MAIN_CONTINUE_BUTTON"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN_NEW_GAME_BUTTON"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN_OPTIONS_BUTTON"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN_EXIT_BUTTON"

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" parent="Control/PanelContainer" instance=ExtResource("2_tpygb")]
layout_mode = 2
can_erase_progress = true

[node name="Button" type="Button" parent="Control/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "OPTIONS_MAIN_EXIT"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="Control" method="set_visible" binds= [true]]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/Button" to="Control" method="set_visible" binds= [false]]
